third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/lambda_param.exp
module 0x42::LambdaParam {
    public fun inline_apply(f: |u64|(u64) has drop, b: u64): u64 {
        f(b)
    }
    public fun inline_apply2(f: |u64|(u64) has drop, b: u64): u64 {
        inline_apply(f, b)
    }
    public fun inline_apply3(f: |u64|(u64) has drop, b: u64): u64 {
        inline_apply4(f, b)
    }
    public fun inline_apply4(_f: |u64|(u64) has drop, b: u64): u64 {
        b
    }
    fun test_lambda_symbol_param1() {
        if (!(inline_apply2(|arg0| __lambda__1__test_lambda_symbol_param1(arg0), 3) == 3)) abort 0;
    }
    fun __lambda__1__test_lambda_symbol_param1(x: u64): u64 {
        x
    }
    fun test_lambda_symbol_param2() {
        if (!(inline_apply2(|arg0| __lambda__1__test_lambda_symbol_param2(arg0), 3) == 3)) abort 0;
        if (!(inline_apply(|arg0| __lambda__2__test_lambda_symbol_param2(arg0), 3) == 3)) abort 0;
        if (!(inline_apply3(|arg0| __lambda__3__test_lambda_symbol_param2(arg0), 3) == 3)) abort 0;
    }
    fun __lambda__1__test_lambda_symbol_param2(x: u64): u64 {
        x
    }
    fun __lambda__2__test_lambda_symbol_param2(x: u64): u64 {
        x
    }
    fun __lambda__3__test_lambda_symbol_param2(x: u64): u64 {
        x
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
   ┌─ lambda_param.move:17:9
   │
17 │     fun __lambda__1__test_lambda_symbol_param1(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__test_lambda_symbol_param1'. Function names cannot start with '_'

error: invalid name
   ┌─ lambda_param.move:25:9
   │
25 │     fun __lambda__1__test_lambda_symbol_param2(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__1__test_lambda_symbol_param2'. Function names cannot start with '_'

error: invalid name
   ┌─ lambda_param.move:28:9
   │
28 │     fun __lambda__2__test_lambda_symbol_param2(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__2__test_lambda_symbol_param2'. Function names cannot start with '_'

error: invalid name
   ┌─ lambda_param.move:31:9
   │
31 │     fun __lambda__3__test_lambda_symbol_param2(x: u64): u64 {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid function name '__lambda__3__test_lambda_symbol_param2'. Function names cannot start with '_'
